# search_engine

./: .gitignore  CMakeLists.txt  README.md
build_cmake_dir/src/manage/: answers.json  config.json  requests.json
build_cmake_dir/src/resources/: test.txt
executable/manage/: answers.json
googleTest/: CMakeLists.txt  ConverterJsonTest.cpp  InvertedIndexTest.cpp  SearchServerTest.cpp  jsonFilesTest.cpp
include/: ConverterJSON.h  InvertredIndex.h  SearchServer.h  fs_exception.h
manage/: answers.json  config.json  requests.json
resources/: file001.txt  file002.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertredIndex.cpp  SearchServer.cpp  fs_exception.cpp  main.cpp
